# ReDoor

./: .gitignore  .gitleaks.toml  .golangci.yml  .swiftformat  .swiftlint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOMAIN_MODEL.md  GOVERNANCE.md  LICENSE  Makefile  OO_DESIGN.md  README.md  SECURITY.md  SUPPORT.md  SYSTEM_DESIGN.md  deny.toml  engine.rs  update_project.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crypto-remediation.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  fuzz-nightly.yml  pr-policy.yml  release-integrity.yml  reliability-nightly.yml  security-drill-kickoff.yml  security-gates.yml
RedoorApp/: Info.plist  RedoorStubs.c
RedoorApp/RedoorApp.xcodeproj/: project.pbxproj
RedoorApp/RedoorAppTests/: RedoorAppTests.swift
RedoorApp/RedoorAppUITests/: RedoorAppUITests.swift  RedoorAppUITestsLaunchTests.swift
RedoorApp/docs/: ENGINEERING_MILESTONES.md
blockchain-node/: Cargo.toml
blockchain-node/src/: api.rs  config.rs  dto.rs  lib.rs  main.rs  metrics.rs  tcp_server.rs
blockchain-node/src/consensus/: authority.rs  mod.rs
blockchain-node/src/crypto/: blake3.rs  ed25519.rs  mod.rs
blockchain-node/src/ledger/: block.rs  chain.rs  tests.rs
blockchain-node/src/ledger/chain/: tests.rs
blockchain-node/tests/: admin_api.rs  http_integration.rs  secure_mode.rs
client/: Cargo.toml  cbindgen.toml
client/fuzz/: Cargo.toml
client/fuzz/corpus/handshake_nested_json/: nested-invalid.json
client/fuzz/corpus/inbound_decode/: invalid-sender-format.json  unknown-envelope-field.json  valid-envelope.json
client/fuzz/fuzz_targets/: envelope.rs  handshake_nested_json.rs  hmac_headers.rs  inbound_decode.rs  parser_worker_ipc.rs  ratchet.rs
client/ios/: RedoorFFI.swift  redoor.h
client/src/: api.rs  builder.rs  config.rs  diagnostics.rs  engine.rs  ffi.rs  ffi_state.rs  lib.rs  main.rs  orchestrator.rs  service.rs  simulation.rs
client/src/blockchain_client/: mod.rs  verify_blockchain.rs
client/src/crypto/: blake3.rs  chacha20poly1305.rs  ed25519.rs  hybrid.rs  mod.rs  pq.rs  x25519.rs  x3dh.rs
client/src/network/: directory.rs  mod.rs  onion.rs  p2p.rs  relay.rs
client/src/ratchet/: double_ratchet.rs  mod.rs  pq_evolution.rs
client/src/storage/: ephemeral.rs  key_manager.rs  mod.rs
client/src/ui/: mod.rs
client/tests/: parser_fuzz_regression.rs  security_test.rs
directory-dht/: Cargo.toml
directory-dht/src/: dht.rs  main.rs
directory-dht/src/dht/: mod.rs  publish.rs  query.rs
docs/: BLUEPRINT.md  BUGSCAN.md  CHANGELOG.md  DEVELOPER_FLOW.md  OPEN_SOURCE_STATUS.md  README.md  REPO_SETUP.md  ROADMAP.md  architecture.md  ci.md  ios.md  protocol.md  release-integrity.md  security-logging.md  security-runbook.md  threat_model.md
docs/enterprise/: DATA_SCALABILITY_AND_PERFORMANCE.md  ENTERPRISE_ARCHITECTURE.md  LOW_LEVEL_AND_OO_DESIGN.md  M1_IMPLEMENTATION_DECOMPOSITION.md  PDF_FOUNDATION.md  README.md  REQUIREMENTS_AND_ROADMAP.md  SCM_AND_MAINTENANCE.md  SECURITY_AND_API_STRATEGY.md  SOFTWARE_DESIGN.md  TESTING_QUALITY_METRICS_AND_SCM.md  UML.md
docs/security/: STANDARDS_PROFILE.md  (+25 more)
itest/: Cargo.toml
itest/tests/: full_roundtrip.rs  hmac_roundtrip.rs  realtime_user_to_user.rs
relay-node/: go.mod
scripts/: bootstrap-dev-secrets.sh  build.sh  build_ios.sh  check-auto-processing-lockdown.sh  check-ios-deployment-target.sh  check-ios-runtime-wiring.sh  check-parser-surface-policy.sh  check-ram-only-policy.sh  check-untrusted-parser-boundary.sh  ci-anonymity-regression.sh  ci-bugscan.sh  ci-drill-rehearsal.sh  ci-go-quality.sh  ci-memory-hygiene.sh  ci-memory-regression.sh  ci-parser-fuzz.sh  ci-reliability-soak.sh  ci-rust-quality.sh  ci-swift-quality.sh  ci-traffic-anonymity-simulator.sh  ci.sh  drill-rollback-rehearsal.sh  generate-fuzz-corpus-metrics.sh  generate-fuzz-corpus-trends.sh  generate-pir-proxy-feasibility-report.sh  generate-pq-ratchet-evolution-report.sh  promote-fuzz-crash-fixtures.sh  release-build-core.sh  rotate-directory-signing-key.sh  rotate-relay-hmac.sh  rotate-service-cert.sh  verify-release-integrity.sh  verify-reproducible-build.sh
tests/: integration.rs
(+68 files in other folders)
