[package]
name = "redoor-blockchain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
base64 = "0.22"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
warp = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.10"
prometheus = "0.14"
once_cell = "1.18"
subtle = "2.6"

[dev-dependencies]
