[package]
name = "redoor-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
curve25519-dalek = "4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1"
libp2p = { version = "0.52", features = ["tcp", "tokio", "dns", "request-response", "yamux", "noise", "macros", "websocket"] }
libp2p-request-response = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# Explicitly enable 'ring' provider for rustls to avoid runtime panic
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
webpki-roots = "0.26"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
# Add Kyber for KEM
pqcrypto-kyber = "0.8"
once_cell = "1.19"
bytes = "1"
rustls-pemfile = "2"
async-trait = "0.1"
zeroize = { version = "1.7", features = ["derive"] }
libc = "0.2"
x509-parser = "0.16"

[features]
default = ["pq"]
pq = []


[lib]
name = "redoor_client"
crate-type = ["rlib", "staticlib", "cdylib"]
