[package]
name = "redoor-directory"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "tokio", "dns", "kad", "noise", "yamux", "macros"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ed25519-dalek = "2"
hex = "0.4"
