[package]
name = "redoor-itest"
version = "0.1.0"
edition = "2021"
publish = false

authors = ["ReDoor Dev"]

[dependencies]
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
base64 = "0.22"
rcgen = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redoor-client = { path = "../client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
